LOGGED IN ONBOARDING - fixed "flicker" of the box being in the upper left while page loads.

--- a/public/client/hellomusic/css/sayso-onboard.css
+++ b/public/client/hellomusic/css/sayso-onboard.css
@@ -198,6 +198,7 @@ html {
 	top: 50%;
 	left: 50%;
 	margin: -215px 0px 0px -300px;
+	display: none;
 }
 
 #sayso-onboard #sso_wrapper .sso_main-image{
